# python-pointofview

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-ci.yml  python-release.yml
pointofview/: __init__.py
src/pointofview/: __init__.py
tests/: test_pointofview.py  test_sample.py
