[tool.commitizen]
version = "1.0.4"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_files = [
  "pyproject.toml:version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pointofview"
version = "1.0.4"
description = "A Python package for determining a piece of text's point of view (first, second, third, or unknown)."
authors = ["David L. Day <david@davidlday.com>"]
license = "GPLv3"
homepage = "https://github.com/prosegrinder/pointofview"
repository = "https://github.com/prosegrinder/pointofview"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7.2"
importlib-metadata = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
black = ">=22.12,<24.0"
