[project]
name = "pointofview"
dynamic = ["version","classifiers"]
description = "A Python package for determining a piece of text's point of view (first, second, third, or unknown)."
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [{ name = "David L. Day", email = "david@davidlday.com"}]
keywords = ["point of view", "text analysis", "natural language processing"]
dependencies = [
  "importlib-metadata>=5.1,<7.0",
]

[project.urls]
homepage = "https://github.com/prosegrinder/python-pointofview"
repository = "https://github.com/prosegrinder/python-pointofview"

[tool.commitizen]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_provider = "poetry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "1.1.3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
pytest = "^8.4.2"
mypy = "^1.18.2"
bandit = "^1.8.6"
black = "^25.11.0"
